--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Damda</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_hint">hint</string>
+    <string name="main_totasset">총 자산</string>
+    <string name="main_totassetmoney">12,000,000원</string>
+    <string name="main_mystatus">주식초보 53일차</string>
+    <string name="main_nickname">닉네임6글자</string>
+    <string name="main_plusbutton">+</string>
 </resources>
