--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="main_stockpercent">+50.00%</string>
     <string name="wallet_transcontent">체결가 30,000원(1950주)</string>
     <string name="wallet_transtime">12:31</string>
+    <string name="wallet_transday">21/5/6(수)</string>
+    <string name="wallet_vallos">평가손익</string>
+    <string name="wallet_vallossmoney">+5,000원</string>
 </resources>
