--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="sign_logo">로고</string>
     <string name="sign_check">중복확인</string>
     <string name="sign_check_message_1">중복확인을 해주세요</string>
-    <string name="sign_check_message_2">사용가능한 아이디입니다</string>
+    <string name="sign_check_message_2">사용가능한 이메일입니다</string>
     <string name="sign_password_check">비밀번호 확인</string>
     <string name="sign_nickname">닉네임 (6자 이내)</string>
     <string name="sign_password_check_hint">비밀번호 확인을 해주세요</string>
