--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">Damda</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--  Sign string.  -->
+    <string name="sign_email">이메일</string>
+    <string name="sign_password">비밀번호</string>
+    <string name="sign_sign_in">로그인</string>
+    <string name="sign_sign_up">회원가입하기</string>
+    <string name="sign_comment">담다가 처음이신가요?</string>
+    <string name="sign_email_hint">이메일을 입력해주세요</string>
+    <string name="sign_password_hint">비밀번호를 입력해주세요</string>
+    <string name="sign_logo">로고</string>
+    <string name="sign_check">중복확인</string>
+    <string name="sign_check_message_1">중복확인을 해주세요</string>
+    <string name="sign_check_message_2">사용가능한 이메일입니다</string>
+    <string name="sign_password_check">비밀번호 확인</string>
+    <string name="sign_nickname">닉네임 (6자 이내)</string>
+    <string name="sign_password_check_hint">비밀번호 확인을 해주세요</string>
+    <string name="sign_nickname_hint">닉네임을 입력해주세요</string>
 </resources>
