[update] activity_selling, activity_buying 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,28 @@
     <string name="one_year">1년</string>
     <string name="buying">매수</string>
     <string name="selling">매도</string>
+    <string name="recent">현재가</string>
+    <string name="recent_money">12,345</string>
+    <string name="two_stock">2</string>
+    <string name="stock_unit">주</string>
+    <string name="total">총</string>
+    <string name="total_money">11,0000</string>
+    <string name="buying_money">6,000</string>
+    <string name="lack">부족</string>
+    <string name="max_buying">최대로 매수</string>
+    <string name="all_delete">전체삭제</string>
+    <string name="do_buying">매수하기</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="zero">0</string>
+    <string name="result_money">+60,000</string>
+    <string name="max_selling">최대로 매도</string>
+    <string name="do_selling">매도하기</string>
 </resources>
