--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="sign_nickname">닉네임 (6자 이내)</string>
     <string name="sign_password_check_hint">비밀번호 확인을 해주세요</string>
     <string name="sign_nickname_hint">닉네임을 입력해주세요</string>
+
+    <!--  Search string.  -->
+    <string name="search_search_icon">검색 아이콘</string>
+    <string name="search_empty_result">해당종목이 없어요</string>
+    <string name="search_another_word">다른 키워드를 검색해주세요</string>
 </resources>
