--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,6 @@
     <string name="result_money">+600,000</string>
     <string name="max_selling">최대로 매도</string>
     <string name="do_selling">매도하기</string>
+    <string name="recheck">다시 한번 확인해주세요</string>
+    <string name="cancel">취소</string>
 </resources>
