--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,21 @@
     <string name="sign_nickname">닉네임 (6자 이내)</string>
     <string name="sign_password_check_hint">비밀번호 확인을 해주세요</string>
     <string name="sign_nickname_hint">닉네임을 입력해주세요</string>
+
+    <!--  Search string.  -->
+    <string name="search_search_icon">검색 아이콘</string>
+    <string name="search_empty_result">해당종목이 없어요</string>
+    <string name="search_another_word">다른 키워드를 검색해주세요</string>
+    <string name="search_high_stock">비싼 주식 <br/> TOP 100</string>
+    <string name="search_low_stock">저렴한 주식<br/> TOP 100</string>
+    <string name="search_favorite_stock">많은 사람들이<br/>관심 있어하는 주식</string>
+    <string name="search_coffee_stock">커피 한 잔</string>
+    <string name="search_chicken_stock">치킨 한 마리</string>
+    <string name="search_giftcard_stock">상품권 한장</string>
+    <string name="search_gift_stock">비싼 선물</string>
+    <string name="search_stock_subtitle">값으로 살 수 있는 주식</string>
+    <string name="search_price_300000">30만원대</string>
+    <string name="search_price_100000">10만원대</string>
+    <string name="search_price_20000">2만원대</string>
+    <string name="search_price_5000">4-5천원대</string>
 </resources>
