--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,8 @@
     <string name="do_selling">매도하기</string>
     <string name="recheck">다시 한번 확인해주세요</string>
     <string name="cancel">취소</string>
+    <string name="chart">Chart</string>
+    <string name="EmptyImage">이미지가 열리지 않습니다.</string>
 
     <!-- Empty String -->
     <string name="app_nonestock">보유종목이 없어요</string>
