--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="app_name">Damda</string>
     <string name="division">코스피</string>
     <string name="stock_code">0</string>
-    <string name="stock_name">카카오</string>
+    <string name="stock_name">GS</string>
     <string name="stock_money">12,345</string>
     <string name="increase_money">▲ 1,000</string>
     <string name="increase_rate">+3.3</string>
