--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,8 +27,8 @@
     <!-- Graph, selling, buying string -->
     <string name="app_name">Damda</string>
     <string name="division">코스피</string>
-    <string name="stock_code">12345</string>
-    <string name="stock_name">카카오</string>
+    <string name="stock_code">0</string>
+    <string name="stock_name">GS</string>
     <string name="stock_money">12,345</string>
     <string name="increase_money">▲ 1,000</string>
     <string name="increase_rate">+3.3</string>
@@ -44,12 +44,12 @@
     <string name="buying">매수</string>
     <string name="selling">매도</string>
     <string name="recent">현재가</string>
-    <string name="recent_money">12,345</string>
-    <string name="two_stock">2</string>
+    <string name="recent_money">0</string>
+    <string name="two_stock">0</string>
     <string name="stock_unit">주</string>
     <string name="total">총</string>
-    <string name="total_money">1110,000</string>
-    <string name="buying_money">60,000</string>
+    <string name="total_money">0</string>
+    <string name="buying_money">0</string>
     <string name="lack">부족</string>
     <string name="max_buying">최대로 매수</string>
     <string name="all_delete">전체삭제</string>
