--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,9 @@
     <string name="cancel">취소</string>
     <string name="chart">Chart</string>
     <string name="EmptyImage">이미지가 열리지 않습니다.</string>
+    <string name="marker_stock_date">21/5/21</string>
+    <string name="marker_stock_time">13:58</string>
+    <string name="marker_stock_money">12,000원</string>
 
     <!-- Empty String -->
     <string name="app_nonestock">보유종목이 없어요</string>
